First Version of the Client Application

--- a/src/app/components/accountInfoSection/AccountInfoSection.css
+++ b/src/app/components/accountInfoSection/AccountInfoSection.css
@@ -2,10 +2,12 @@
     #accommodation-information {
         padding-left: 4%;
         padding-top: 10%;
+        margin-top: 50px;
     }
 
     #current-payment-information {
         padding-left: 4%;
         padding-top: 10%;
+        margin-top: 50px;
     }
 }
