--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,7 +1,7 @@
 .page-content {
     padding: 5% 10% 5% 10%;
     width: 80%;
-    height: 90%;
+    height: 90vh;
 }
 
 .button-container {
@@ -23,6 +23,8 @@
     width: 92%;
     border: 3px solid var(--coliv-dark-green);
     border-radius: 5px;
+    height: 90%;
+    overflow: scroll;
 }
 
 .section {
