--- a/src/app/components/bookingSection/BookingSection.css
+++ b/src/app/components/bookingSection/BookingSection.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
-    height: 100%;
 }
 
 .dropdown-container {
