--- a/src/app/components/myActiveTimeslots/MyActiveTimeslots.css
+++ b/src/app/components/myActiveTimeslots/MyActiveTimeslots.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
-    height: 100%;
 }
 
 .my-active-timeslots-section__header {
