Forgot and Reset Password Designs and Functionality Implemented

--- a/src/app/components/resetPasswordForm/ResetPasswordForm.css
+++ b/src/app/components/resetPasswordForm/ResetPasswordForm.css
@@ -1,4 +1,4 @@
-.login-form-container {
+.reset-password-form-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -9,11 +9,7 @@
     padding: 5%;
 }
 
-.form__title {
-    font-size: var(--title-font-large-screen);
-}
-
-.login-form {
+.reset-password-form {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -21,7 +17,7 @@
     align-items: flex-start;
 }
 
-#forgot-password-row {
+#to-login-row {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -29,22 +25,17 @@
     font-size: var(--body-font-large-screen);
 }
 
-.error-msg {
-    color: var(--error-red);
-    font-size: var(--body-font-large-screen);
-}
-
-#forgot-password-link {
+#to-login-link {
     color: var(--coliv-dark-green);
     text-decoration: underline;
 }
 
-#forgot-password-link:hover {
+#to-login-link:hover {
     cursor: pointer;
 }
 
 @media only screen and (max-width: 800px) {
-    .login-form-container {
+    .reset-password-form-container {
         margin-left: 2%;
         margin-right: 2%;
     }
