--- a/src/app/components/tenantRegistrationForm/TenantRegistrationForm.css
+++ b/src/app/components/tenantRegistrationForm/TenantRegistrationForm.css
@@ -1,5 +1,6 @@
 .tenant-registration-form-container {
     width: 40%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -14,6 +15,13 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+}
+
+.mobile-number-input-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .datepicker-container {
@@ -31,5 +39,13 @@
     .tenant-registration-form-container {
         width: 90%;
         border: none;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .mobile-number-input-row {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
